--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
     "@chakra-ui/react": "^1.6.5",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@here/maps-api-for-javascript": "^1.28.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.2.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
