--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "weather-map",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://wlcharlie.github.io/weather-map-app/",
   "dependencies": {
     "@chakra-ui/react": "^1.6.5",
     "@emotion/react": "^11.4.0",
@@ -28,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
